--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 		<a-assets>
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRfHViA83yeCs5H4e3myOZVN8fgXgPAmPKicg&usqp=CAU"
 				id="wallpaper" crossorigin="anonymous">
-			<a-asset-item id="tree" src="../objects/tree/model.gltf"></a-asset-item>
-			<a-asset-item id="snowman" src="../objects/snowman/model.gltf"></a-asset-item>
-			<a-asset-item id="candy-cane" src="../objects/candy-cane/275_Candy Cane.gltf"></a-asset-item>
-			<a-asset-item id="present-red-yellow-square" src="../objects/present-red-yellow-square/model.gltf">
+			<a-asset-item id="tree" src="./objects/tree/model.gltf"></a-asset-item>
+			<a-asset-item id="snowman" src="./objects/snowman/model.gltf"></a-asset-item>
+			<a-asset-item id="candy-cane" src="./objects/candy-cane/275_Candy Cane.gltf"></a-asset-item>
+			<a-asset-item id="present-red-yellow-square" src="./objects/present-red-yellow-square/model.gltf">
 			</a-asset-item>
-			<a-asset-item id="present-green-red-square" src="../objects/present-green-red-square/model.gltf">
+			<a-asset-item id="present-green-red-square" src="./objects/present-green-red-square/model.gltf">
 			</a-asset-item>
 			<img src="./snow-texture.jpg" id="ground" crossorigin="anonymous">
 		</a-assets>
