Moved location of candy canes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				id="wallpaper" crossorigin="anonymous">
 			<a-asset-item id="tree" src="./objects/tree/model.gltf"></a-asset-item>
 			<a-asset-item id="snowman" src="./objects/snowman/model.gltf"></a-asset-item>
-			<a-asset-item id="candy-cane" src="./objects/candy-cane/275_Candy Cane.gltf"></a-asset-item>
+			<a-asset-item id="candy-cane" src="./275_Candy Cane.gltf"></a-asset-item>
 			<a-asset-item id="present-red-yellow-square" src="./objects/present-red-yellow-square/model.gltf">
 			</a-asset-item>
 			<a-asset-item id="present-green-red-square" src="./objects/present-green-red-square/model.gltf">
