--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
 		<a-assets>
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRfHViA83yeCs5H4e3myOZVN8fgXgPAmPKicg&usqp=CAU"
 				id="wallpaper" crossorigin="anonymous">
-			<a-asset-item id="tree" src="./objects/tree/model.gltf"></a-asset-item>
+			<!--<a-asset-item id="tree" src="./objects/tree/model.gltf"></a-asset-item>
 			<a-asset-item id="snowman" src="./objects/snowman/model.gltf"></a-asset-item>
+			-->
 			<a-asset-item id="candy-cane" src="./275_Candy Cane.gltf"></a-asset-item>
-			<a-asset-item id="present-red-yellow-square" src="./objects/present-red-yellow-square/model.gltf">
+			<!--<a-asset-item id="present-red-yellow-square" src="./objects/present-red-yellow-square/model.gltf">
 			</a-asset-item>
 			<a-asset-item id="present-green-red-square" src="./objects/present-green-red-square/model.gltf">
-			</a-asset-item>
+			</a-asset-item>-->
 			<img src="./snow-texture.jpg" id="ground" crossorigin="anonymous">
 		</a-assets>
 
@@ -73,6 +74,8 @@
 		<a-plane src="#ground" position="-1 -13 2" rotation="-90 0 0" color="#B9B9B9" width="1000" height="1000">
 		</a-plane>
 
+		<!--
+
 		<a-entity gltf-model="#tree" modify-materials position="-30 -97 -50" rotation="0 275 0" scale="100 100 100">
 		</a-entity>
 
@@ -80,7 +83,7 @@
 		</a-entity>
 
 		<a-entity gltf-model="#snowman" modify-materials position="-10 26 -30" rotation="0 330 0" scale="20 20 20">
-		</a-entity>
+		</a-entity>-->
 
 		<a-entity gltf-model="#candy-cane" modify-materials position="7 -10 -25" rotation="0 130 10"
 			scale="0.2 0.2 0.2"></a-entity>
@@ -88,11 +91,13 @@
 		<a-entity gltf-model="#candy-cane" modify-materials position="-7 -10 -25" rotation="0 55 10"
 			scale="0.2 0.2 0.2"></a-entity>
 
+		<!--
+
 		<a-entity gltf-model="#present-red-yellow-square" modify-materials position="-12 -18 -13" rotation="0 55 9"
 			scale="10 10 8"></a-entity>
 
 		<a-entity gltf-model="#present-green-red-square" modify-materials position="20 -18 -18" rotation="0 110 10"
-			scale="10 10 8"></a-entity>
+			scale="10 10 8"></a-entity>-->
 
 		<a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Merry Christmas Everyone!; width: 10;"
 			position="2.25 -1.2 -5" rotation="-30 0 0"></a-entity>
