--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
 	<script src="https://cdn.rawgit.com/matthewbryancurtis/aframe-star-system-component/db4f1030/index.js"></script>
 	<script>
+		const name = prompt("What is your name?")
 			AFRAME.registerComponent('ribbon', {
 				init: function () {
 					let x = 0, y = 0;
@@ -90,21 +91,24 @@
 		<a-entity gltf-model="#candy-cane" modify-materials position="-7 -10 -25" rotation="0 55 10"
 			scale="0.2 0.2 0.2"></a-entity>
 
-		
-
 		<a-entity gltf-model="#present-red-yellow-square" modify-materials position="-12 -18 -13" rotation="0 55 9"
 			scale="10 10 8"></a-entity>
 
 		<a-entity gltf-model="#present-green-red-square" modify-materials position="20 -18 -18" rotation="0 110 10"
 			scale="10 10 8"></a-entity>
 
-		<a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Merry Christmas Everyone!; width: 10;"
+		<a-entity id="textOutput" text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Merry Christmas Everyone!; width: 10;"
 			position="2.25 -1.2 -5" rotation="-30 0 0"></a-entity>
 
 		<a-entity position="-5 -1 -5.2" 
 		rotation="-30 0 0" scale="2 2 1.5" ribbon></a-entity>
 
 	</a-scene>
+
+	<script>
+		const textOutput = document.querySelector("#textOutput");
+		textOutput.setAttribute("text", `font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Merry Christmas ${name}!; width: 10;`)
+	</script>
 </body>
 
 </html>
